Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28998

Hyperlink colors does not work in QTextBrowser Qt5

XMLWordPrintable

    • qtbase/stable: a83983d8617cba0caaae2cb2d6caf82b8e4f50a2

      Hyperlink color does not change after link has been clicked. Example which can reproduce this issue shown below as a code block.

      #include <QtWidgets/QApplication>
      #include <QtWidgets/QTextBrowser>
      
      int main(int argc, char *argv[])
      {
          QApplication a( argc, argv );
          QPalette p = a.palette();
          p.setBrush( QPalette::Link, Qt::red);
          a.setPalette( p );
      
          QTextBrowser browser;
          browser.setOpenExternalLinks(true);
          browser.setHtml("<a href='mailto:test@test.org'>test@test.org</a>");
          browser.show();
      
          return a.exec();
      }
      

        For Gerrit Dashboard: QTBUG-28998
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes